cpp/test/Slice/errorDetection/IllegalIdentifier.err
IllegalIdentifier.ice:18: illegal input character: '\357'
IllegalIdentifier.ice:18: syntax error
IllegalIdentifier.ice:18: illegal input character: '\273'
IllegalIdentifier.ice:18: illegal input character: '\277'
IllegalIdentifier.ice:26: illegal input character: '\305'
IllegalIdentifier.ice:26: illegal input character: '\222'
IllegalIdentifier.ice:28: illegal input character: '\305'
IllegalIdentifier.ice:28: illegal input character: '\223'
IllegalIdentifier.ice:29: syntax error
